got the start button to start the outbreak

--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -180,7 +180,8 @@
   //console.log(neighborhood[50].getStatus());
 </script>
 <script>
-  
+  document.getElementById("start-btn").onclick = function() {diseaseOutbreak()};
+    function diseaseOutbreak(){
       //start outbreak
       var Check = new GraphCheck();//using the GaphCheck object to simulate the virus outbreak
       let z =0;
@@ -269,7 +270,7 @@
     }
     
 
-
+  }
   //another loop needed to chenge states (infected to recovered or susceptible to infected)
 </script>
 
