--- a/views/homepage.html
+++ b/views/homepage.html
@@ -67,6 +67,11 @@
                     underlying medical conditions like heart or lung disease or diabetes seem to be at higher risk for developing more serious complications
                     from COVID-19 illness. Some symptoms of Orthocoronavirinae are fever or chills, cough, shortness of breath, fatigue, muscle or body aches, 
                     new loss of taste or smell, nausea or vomiting, and diarrhea.</p>
+                    <embed> <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="100%" height="600px"></iframe></embed>
+                        <iframe src="https://public.domo.com/cards/azrGr" width="100%" height="600" marginheight="0" marginwidth="0"
+                            frameborder="0"></iframe>
+                    <iframe src="https://public.domo.com/cards/aAR5B" width="100%" height="600" marginheight="0" marginwidth="0"
+                        frameborder="0"></iframe>
                     <a class = "read-more special-link-format" href="https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/cases-in-us.html" target="_blank">Read more...</a>
             </div>
             <div class ="bubonic-plague fade-in">
@@ -108,7 +113,7 @@
         <!--sources and cited work that we used for the information on diseases-->
         <footer id="footer-banner">
             <div id="sources">
-                <cite>Sources: [1] https://www.who.int/emergencies/diseases/novel-coronavirus-2019 [2] https://www.history.com/</cite>
+                <cite>Sources: [1] https://www.who.int/emergencies/diseases/novel-coronavirus-2019 [2] https://www.history.com/ [3] https://ourworldindata.org/ <br> [4] https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6</cite>
             </div>
         </footer>
         <!--javascript file for fading scroll effect-->
