--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -17,7 +17,7 @@
     <link href='https://css.gg/play-pause-o.css' rel='stylesheet'>
 
     <script src="../scripts/popupBoxes.js"></script>
-  
+    <script src="../scripts/createDisease.js"></script>
     <script src="../scripts/outbreak.js"></script><!--including the neighborhood class and state class-->
     <script src="../scripts/graphCheck.js"></script><!--including the GraphCheck class for the outbreak-->
   </head>
@@ -43,16 +43,16 @@
         <div id="input-boxes">
           <div id="create-disease-heading">Create Disease</div>
           <label for="diseaseName">Disease Name: </label>
-          <input type="text" name="diseaseName" value="Name" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+          <input id="disease-name-field" type="text" name="diseaseName" value="Name" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
           <br>
           <label for="infRate">Infection Rate: </label>
-          <input type="text" name="infRate" value="0" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+          <input id="infection-rate-field" type="text" name="infRate" value="50" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
           <br>
           <label for="threshold">Threshold: </label>
-          <input type="text" name="threshold" value="0" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+          <input id="threshold-field" type="text" name="threshold" value="1" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
           <br>
           <label for="numDays">No. of Days: </label>
-          <input type="text" name="numDays" value="365" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+          <input id="num-days-field" type="text" name="numDays" value="365" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
   
           <div id="popups">
             <div id="diseaseName-popup" class="popup-style">
@@ -60,7 +60,7 @@
               <div id=popup-arrow></div>
             </div>
             <div id="infRate-popup" class="popup-style">
-              <b>Infection Rate: </b>The rate at which the disease spreads. Enter a number between 0 and 100.
+              <b>Infection Rate: </b>The rate at which the disease spreads. Enter a number between 1 and 100.
               <div id=popup-arrow></div>
             </div>
             <div id="threshold-popup" class="popup-style">
@@ -74,18 +74,18 @@
           </div>
         </div>
 
-        <div id="save-btn" class="input-btn">
+        <div id="save-btn" class="input-btn" onclick="validateFields()">
           <i id="save-btn-icon" class="gg-import"></i>
           <div id="save-btn-text" class="btn-text-style">Save</div>
         </div>
-        <div id="erase-btn" class="input-btn">
-          <i id="erase-btn-icon" class="gg-erase"></i>
-          <div id="erase-btn-text" class="btn-text-style">Erase</div>
+        <div id="clear-btn" class="input-btn" onclick="clearAllFields()">
+          <i id="clear-btn-icon" class="gg-erase"></i>
+          <div id="clear-btn-text" class="btn-text-style">Clear</div>
         </div>
       </div>
 
-      <div id="slide-menu-btn" onclick="toggleSlideMenu()">
-        <i id="slide-menu-btn-icon" class="gg-menu"></i>
+      <div id="slide-menu-toggler" onclick="toggleSlideMenu()">
+        <i id="slide-menu-toggler-icon" class="gg-menu"></i>
       </div>
     </div>
 
@@ -104,179 +104,179 @@
       </div>
     </div>
 
-<script>
-  threshold = 1;//represents the amount of adjacent neighbors that can cause a suceptible neighbor to become infected
-  infectionPeriod =7;//represetns how long the neighborhood is infected
-   
-
-  /*end of simulation functions */
-  var table = "<table Id = graph>";//represents a html table
-  const size = 200;
-  //creating the neighborhood object
-  let neighborhood = [];
-  var n = new Neighborhood();
-  n.setInfectionPeriod(infectionPeriod);//setting the time period a neighborhood will be infected for
-  for(i =0; i < size*size; i++)
-  {
-    neighborhood.push(n);
-    n = new Neighborhood();//must do this to prevent all objects refering to 1 object
-    n.setInfectionPeriod(infectionPeriod);
-  }
-  //const neighborhood = new Neighborhood()[67,600];//creating a 2d array of neighborhoods
-  
-  //generating tha table graph  
-  for(i = 0; i < size; i++)
-  {
-      table += "<tr>"
-      for(j = 0; j < size; j++)
+    <script>
+      threshold = 1;//represents the amount of adjacent neighbors that can cause a suceptible neighbor to become infected
+      infectionPeriod =7;//represetns how long the neighborhood is infected
+      
+    
+      /*end of simulation functions */
+      var table = "<table Id = graph>";//represents a html table
+      const size = 200;
+      //creating the neighborhood object
+      let neighborhood = [];
+      var n = new Neighborhood();
+      n.setInfectionPeriod(infectionPeriod);//setting the time period a neighborhood will be infected for
+      for(i =0; i < size*size; i++)
       {
-         table +="<td></td>";
+        neighborhood.push(n);
+        n = new Neighborhood();//must do this to prevent all objects refering to 1 object
+        n.setInfectionPeriod(infectionPeriod);
       }
-    table += "</tr>"
-  }
-  table += "</table>";
-  
-  document.write(table); //writting the table to the document
-  var x = document.getElementsByTagName("td");//getting all the columns in the table
-  var infection = Math.floor(Math.random()*size); 
-
-  /*variables for the count of different states neighborhoods could be in */
-  let numInfected =0;
-  let numVacinated =0;
-  let numRecovered =0;
-  let numsusceptible =0;
- 
-
-  //randomly set states to the graph
-  for(i=0; i < x.length; i++)//number of columns in the graph
-  {
-    if(infection < 2)
-    {
-      x[i].style.backgroundColor = "red";//infected
-      neighborhood[i].setStatus("red");
-      //console.log(neighborhood[i].getStatus());
-      //numInfected++;
-    }
-    else if(infection > (size * .02) && infection <= (size * 2.6))
-    {
-      //console.log("vacinated at " +i);
-      x[i].style.backgroundColor = "blue";//vacinated
-      neighborhood[i].setStatus("blue");
-      //console.log(neighborhood[i].getStatus());
-    }
-    else if(infection > (size *2.6) && infection <= (size *3.0))
-    {
-      x[i].style.backgroundColor = "green";//recovered
-      neighborhood[i].setStatus("green");
-      //console.log(neighborhood[i].getStatus());
-    }
-    else
-    {
-      x[i].style.backgroundColor = "yellow";//susceptible
-      neighborhood[i].setStatus("yellow");
-    }
-    infection = Math.floor(Math.random()*(size * size));
-  }
-  //console.log(neighborhood[50].getStatus());
-</script>
-
-<script>
-
-  
-  document.getElementById("start-btn").onclick = function() {diseaseOutbreak()};//will start the disease outbreak after the start 
-  //button has been pressed.
-
-    function diseaseOutbreak(){
-      //start outbreak
-      var Check = new GraphCheck();//using the GaphCheck object to simulate the virus outbreak
-      let z =0;
-      display = 2; //represents the stoping point 
-      let outbreak = true;
-      console.log(outbreak);
-      while(outbreak === true && z < display)
+      //const neighborhood = new Neighborhood()[67,600];//creating a 2d array of neighborhoods
+      
+      //generating tha table graph  
+      for(i = 0; i < size; i++)
       {
-        
-        numInfected =0; //resetting the number of infected neighborhoods
-        //console.log("here");
-        for(i=0; i < neighborhood.length; i++)//number of columns in the graph
+          table += "<tr>"
+          for(j = 0; j < size; j++)
+          {
+            table +="<td></td>";
+          }
+        table += "</tr>"
+      }
+      table += "</table>";
+      
+      document.write(table); //writting the table to the document
+      var x = document.getElementsByTagName("td");//getting all the columns in the table
+      var infection = Math.floor(Math.random()*size); 
+    
+      /*variables for the count of different states neighborhoods could be in */
+      let numInfected =0;
+      let numVacinated =0;
+      let numRecovered =0;
+      let numsusceptible =0;
+    
+    
+      //randomly set states to the graph
+      for(i=0; i < x.length; i++)//number of columns in the graph
+      {
+        if(infection < 2)
         {
-          if(i === 0)
-          {
-            Check.topLeftCorner(neighborhood, i);
-          }
-          else if(i === size*(size -1))
-          {
-            Check.bottomLeftCorner(neighborhood, i);
-          }
-          else if(i === size - 1)
-          {
-            //x[i].style.backgroundColor = "black";//infected
-            Check.topRightCorner(neighborhood, i);
-          }
-          else if(i === (size * size) -1)
-          {
-            Check.bottomRightCorner(neighborhood, i);
-          }
-          else if(i % size ===0)
-          {
-            Check.leftSide(neighborhood, i);
-          }
-          else if(i % size === size-1)
-          {
-            Check.rightSide(neighborhood, i);
-          }
-          else if(i > (size * size) - size)
-          {
-            Check.bottomRow(neighborhood, i);
-          }
-          else if(i < size)
-          {
-            Check.topRow(neighborhood, i);
-          }
-          else
-          {
-            Check.innerGraph(neighborhood, i);
-          }
+          x[i].style.backgroundColor = "red";//infected
+          neighborhood[i].setStatus("red");
+          //console.log(neighborhood[i].getStatus());
+          //numInfected++;
         }
-        //outbreak = true;//for debugging purposes
-        for(i =0; i < neighborhood.length; i++)
+        else if(infection > (size * .02) && infection <= (size * 2.6))
         {
-          if(neighborhood[i].getStatus() === "susceptible")
-          {
-            //console.log("threshold at " + i + ": " + neighborhood[i].getThreshold());
-            if(neighborhood[i].getThreshold() >= threshold)
-            {
-              neighborhood[i].setStatus("red");//infected
-              x[i].style.backgroundColor = "red";//infected
-              
-            }
-          }
-          else if(neighborhood[i].getStatus() === "infected")
-          {
-            //console.log("infection at " + i);
-            if(neighborhood[i].getInfection() > infectionPeriod)
-            {
-              neighborhood[i].setStatus("green"); //changing the neighborhood to recoverred
-              x[i].style.backgroundColor = "green";//infected
-              numInfected--; //decrementing the number of infected neighborhoods. 
-            }
-            else
-            {
-              neighborhood[i].incrementInfection();//increment the number of days the neighborhood is infected
-            }
-          }
+          //console.log("vacinated at " +i);
+          x[i].style.backgroundColor = "blue";//vacinated
+          neighborhood[i].setStatus("blue");
+          //console.log(neighborhood[i].getStatus());
         }
-        for(k =0; k < neighborhood.length; k++)
+        else if(infection > (size *2.6) && infection <= (size *3.0))
         {
-          if(neighborhood[k].getStatus() === "infected"){numInfected++;}
+          x[i].style.backgroundColor = "green";//recovered
+          neighborhood[i].setStatus("green");
+          //console.log(neighborhood[i].getStatus());
         }
-        if(numInfected === 0){outbreak = false;}
-        z++;
-    }
-  }
-  //another loop needed to chenge states (infected to recovered or susceptible to infected)
-</script>
-
+        else
+        {
+          x[i].style.backgroundColor = "yellow";//susceptible
+          neighborhood[i].setStatus("yellow");
+        }
+        infection = Math.floor(Math.random()*(size * size));
+      }
+      //console.log(neighborhood[50].getStatus());
+    </script>
+    
+    <script>
+    
+      
+      document.getElementById("start-btn").onclick = function() {diseaseOutbreak()};//will start the disease outbreak after the start 
+      //button has been pressed.
+    
+        function diseaseOutbreak(){
+          //start outbreak
+          var Check = new GraphCheck();//using the GaphCheck object to simulate the virus outbreak
+          let z =0;
+          display = 2; //represents the stoping point 
+          let outbreak = true;
+          console.log(outbreak);
+          while(outbreak === true && z < display)
+          {
+            
+            numInfected =0; //resetting the number of infected neighborhoods
+            //console.log("here");
+            for(i=0; i < neighborhood.length; i++)//number of columns in the graph
+            {
+              if(i === 0)
+              {
+                Check.topLeftCorner(neighborhood, i);
+              }
+              else if(i === size*(size -1))
+              {
+                Check.bottomLeftCorner(neighborhood, i);
+              }
+              else if(i === size - 1)
+              {
+                //x[i].style.backgroundColor = "black";//infected
+                Check.topRightCorner(neighborhood, i);
+              }
+              else if(i === (size * size) -1)
+              {
+                Check.bottomRightCorner(neighborhood, i);
+              }
+              else if(i % size ===0)
+              {
+                Check.leftSide(neighborhood, i);
+              }
+              else if(i % size === size-1)
+              {
+                Check.rightSide(neighborhood, i);
+              }
+              else if(i > (size * size) - size)
+              {
+                Check.bottomRow(neighborhood, i);
+              }
+              else if(i < size)
+              {
+                Check.topRow(neighborhood, i);
+              }
+              else
+              {
+                Check.innerGraph(neighborhood, i);
+              }
+            }
+            //outbreak = true;//for debugging purposes
+            for(i =0; i < neighborhood.length; i++)
+            {
+              if(neighborhood[i].getStatus() === "susceptible")
+              {
+                //console.log("threshold at " + i + ": " + neighborhood[i].getThreshold());
+                if(neighborhood[i].getThreshold() >= threshold)
+                {
+                  neighborhood[i].setStatus("red");//infected
+                  x[i].style.backgroundColor = "red";//infected
+                  
+                }
+              }
+              else if(neighborhood[i].getStatus() === "infected")
+              {
+                //console.log("infection at " + i);
+                if(neighborhood[i].getInfection() > infectionPeriod)
+                {
+                  neighborhood[i].setStatus("green"); //changing the neighborhood to recoverred
+                  x[i].style.backgroundColor = "green";//infected
+                  numInfected--; //decrementing the number of infected neighborhoods. 
+                }
+                else
+                {
+                  neighborhood[i].incrementInfection();//increment the number of days the neighborhood is infected
+                }
+              }
+            }
+            for(k =0; k < neighborhood.length; k++)
+            {
+              if(neighborhood[k].getStatus() === "infected"){numInfected++;}
+            }
+            if(numInfected === 0){outbreak = false;}
+            z++;
+        }
+      }
+      //another loop needed to chenge states (infected to recovered or susceptible to infected)
+    </script>
+  
     <script>
       var table = document.getElementById("graph");
       var row = table.insertRow(0);
