--- a/views/homepage.html
+++ b/views/homepage.html
@@ -6,7 +6,6 @@
             crossorigin="anonymous"></script>
         <link href='../css/homepagestyle.css' rel='stylesheet'>
         <link href='https://css.gg/push-chevron-up.css' rel='stylesheet'>
-        <link href='https://css.gg/chevron-double-down-o.css' rel='stylesheet'>
         <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
         <meta name="viewport" contents="width=device-width">
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap" rel="stylesheet" />
@@ -40,7 +39,7 @@
         </header>
 
         <!--main banner used for the home page-->
-        <div class="banner-homepage">
+        <div id="banner-homepage">
             <div id="title">Project Outbreak</div>
             <div id="title-names">By: Clint Wyatt, Ryan Schick and Ty Rozell</div>
         </div>
@@ -105,7 +104,7 @@
             <div id="simulator-page-link-text">Go to Simulator</div>
             <i id="simulator-page-link-icon" class="gg-arrow-right-o"></i>
         </a>
-        <a id="top-shortcut" class="special-link-format" href="#banner">
+        <a id="top-shortcut" class="special-link-format" href="#banner-homepage">
             <div class="shortcut-text">Top</div>
             <i class="shortcut-icon gg-push-chevron-up"></i>
         </a>
