Added testMap.jpg to sim page and designed slide menu more

--- a/css/testMapStyle.css
+++ b/css/testMapStyle.css
@@ -17,10 +17,10 @@ td {
 }
 .redOnHover:hover {
   background-color: red;
-  opacity: 75%;
+  opacity: 0.75;
 }
 .redOnHover {
-  opacity: 20%;
+  opacity: 0.2;
 }
 .blueOnClick:active {
   background-color: blue;
