--- a/views/htmlMapTest.html
+++ b/views/htmlMapTest.html
@@ -1,6 +1,3 @@
-<!--Each table row is defined with the <tr> tag. A table header is defined with the <th> tag.
-By default, table headings are bold and centered. A table data/cell is defined with the <td> tag.-->
-
 <!--
   Test Map
 -->
@@ -17,7 +14,7 @@ By default, table headings are bold and centered. A table data/cell is defined w
     </br>
 
     <!--make table script-->
-    <script src="../scripts/createTable.js"></script>
+    <script src="../scripts/createTable(old).js"></script>
 
     <div id="textBoxes">
       <div id="cellText">
@@ -37,6 +34,6 @@ By default, table headings are bold and centered. A table data/cell is defined w
   </body>
 
 <!--start grid selector script-->
-<script src="../scripts/startGridSelector.js"></script>
+<script src="../scripts/startGridSelector(old).js"></script>
 
 </html>
