--- a/css/htmlTableStyle.css
+++ b/css/htmlTableStyle.css
@@ -2,25 +2,38 @@
   position: relative;
   table-layout: fixed;
   border-collapse: collapse;
+  border: 2px solid black;
+  margin: 25px auto 50px;
+  width: 1000px;
+  height: 600px;
+  background-image: url(../images/testMap.jpg);
+  background-size: 101% 100%;
+  z-index: 2;
+}
+#graph_LEGACY {
+  position: relative;
+  table-layout: fixed;
+  border-collapse: collapse;
   border: 1px solid black;
   margin: 25px auto 50px;
   width: 1250px;
   height: 469px;
   z-index: 2;
 }
-.row {
+#graph .row {
   height: 5px;
 }
-.col {
+#graph .col {
   width: 5px;
   border: 1px solid black;
 }
-tr {
+#graph tr {
   height: 2px;
 }
-td {
+#graph td {
   width: 2px;
-  border: 1px solid black;
+  opacity: 0.4;
+  border: 0px black solid;
 }
 #grey-overlay {
   position: fixed;
@@ -28,10 +41,10 @@ td {
   height: 100%;
   background-color: black;
   transition: opacity 0.4s;
-  opacity: 0%;
+  opacity: 0;
 }
 #grey-overlay.active {
-  opacity: 50%;
+  opacity: 0.5;
   z-index: 3;
 }
 .nav__list {
@@ -72,7 +85,7 @@ td {
   top: -150px;
   position: absolute;
   margin: 0 auto;
-  width: 900px;
+  width: 800px;
   height: 250px;
   transition: top 0.4s;
   background-image: linear-gradient(rgb(19, 19, 19), rgb(48, 48, 48));
@@ -127,7 +140,7 @@ td {
   color: white;
   font-size: 20px;
 }
-#input-boxes {
+#create-disease-container {
   position: relative;
   top: 40px;
   right: 130px;
@@ -135,18 +148,19 @@ td {
   text-align: right;
   float: left;
 }
-#input-boxes label {
+#create-disease-container label {
   color: white;
 }
-#input-boxes input {
+#create-disease-container input {
   font-family: 'Times New Roman', Times, serif;
   font-size: 14px;
   margin-top: 10px;
   text-align: center;
   background-color: white;
   transition: background-color 0.4s ease;
+  width: 175px;
 }
-#input-boxes input:focus{
+#create-disease-container input:focus{
   background-color: lightgray;
 }
 #popups {
@@ -155,7 +169,7 @@ td {
   bottom: 138px;
 }
 .popup-style {
-  opacity: 0%;
+  opacity: 0;
   transition: opacity 0.4s;
   background-color: rgb(88, 88, 88);
   color: white;
@@ -214,32 +228,35 @@ td {
   transition: background-color 0s;
   background-color: rgb(36, 36, 36);
 }
-#save-btn {
-  left: 330px;
-  top: 144px;
-}
-#clear-btn {
-  left: 385px;
-  top: 97px;
-}
-#save-btn-text {
-  left: 7px;
-  top: 25px;
-}
-#clear-btn-text {
-  left: 5px;
-  top: 25px;
-}
 .btn-text-style {
   transition: color 0.2s;
   position: absolute;
   width: 50px;
   height: 15px;
 }
+#create-disease-btns {
+  position: relative;
+  left: 445px;
+  bottom: 173px;
+  width: 100px;
+  height: 50px;
+}
+#save-btn-text {
+  right: 6px;
+  top: 25px;
+}
 #save-btn-icon {
   position: relative;
   top: 9px;
   left: 14px;
+}
+#clear-btn {
+  left: 55px;
+  bottom: 47px;
+}
+#clear-btn-text {
+  right: 5px;
+  top: 25px;
 }
 #clear-btn-icon {
   position: relative;
@@ -279,7 +296,7 @@ td {
   position: relative;
   width: 200px;
   height: 64px;
-  left: 535px;
+  left: 410px;
   top: 40px;
   z-index: 1;
 }
@@ -314,8 +331,8 @@ td {
 }
 #load-disease-container {
   position: relative;
-  left: 550px;
-  bottom: 30px;
+  left: 500px;
+  bottom: 75px;
   width: 300px;
   height: 100px;
 }
@@ -326,6 +343,8 @@ td {
   font-family: 'Times New Roman', Times, serif;
   font-size: 14px;
   text-align: center;
+  transition: background-color 0.4s ease;
+  width: 175px;
 }
 #load-disease-heading {
   position: relative;
@@ -381,7 +400,7 @@ td {
 #load-btn {
   position: relative;
   left: 215px;
-  top: 23px;
+  top: 165px;
 }
 #load-btn-icon {
   position: relative;
@@ -391,5 +410,5 @@ td {
 #load-btn-text {
   position: relative;
   left: 6px;
-  bottom: 159px;
+  bottom: 303px;
 }
