--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -44,47 +44,47 @@
       <div id="menu-heading">Options</div>
 
       <div id="create-disease-container">
-        <div id="input-boxes">
-          <div id="create-disease-heading">Create Disease</div>
-          <label for="diseaseName">Disease Name: </label>
-          <input id="disease-name-field" type="text" name="diseaseName" value="Name" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
-          <br>
-          <label for="infRate">Infection Rate: </label>
-          <input id="infection-rate-field" type="text" name="infRate" value="50" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
-          <br>
-          <label for="threshold">Threshold: </label>
-          <input id="threshold-field" type="text" name="threshold" value="1" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
-          <br>
-          <label for="numDays">No. of Days: </label>
-          <input id="num-days-field" type="text" name="numDays" value="365" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
-  
-          <div id="popups">
-            <div id="diseaseName-popup" class="popup-style">
-              <b>Name: </b>Enter a name for the disease.
-              <div id=popup-arrow></div>
-            </div>
-            <div id="infRate-popup" class="popup-style">
-              <b>Infection Rate: </b>The rate at which the disease spreads. Enter a number between 1 and 100.
-              <div id=popup-arrow></div>
-            </div>
-            <div id="threshold-popup" class="popup-style">
-              <b>Threshold: </b>How many adjacent infected neighborhoods are required to infect a neighborhood? Enter a number from 1 to 8.
-              <div id=popup-arrow></div>
-            </div>
-            <div id="numDays-popup" class="popup-style">
-              <b>No. of Days: </b>Enter the number of days the disease will last.
-              <div id=popup-arrow></div>
-            </div>
+        <div id="create-disease-heading">Create Disease</div>
+        <label for="diseaseName">Disease Name: </label>
+        <input id="disease-name-field" type="text" name="diseaseName" value="Name" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+        <br>
+        <label for="infRate">Infection Rate: </label>
+        <input id="infection-rate-field" type="text" name="infRate" value="50" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+        <br>
+        <label for="threshold">Threshold: </label>
+        <input id="threshold-field" type="text" name="threshold" value="1" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+        <br>
+        <label for="numDays">No. of Days: </label>
+        <input id="num-days-field" type="text" name="numDays" value="365" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+
+        <div id="popups">
+          <div id="diseaseName-popup" class="popup-style">
+            <b>Name: </b>Enter a name for the disease.
+            <div id=popup-arrow></div>
+          </div>
+          <div id="infRate-popup" class="popup-style">
+            <b>Infection Rate: </b>The rate at which the disease spreads. Enter a number between 1 and 100.
+            <div id=popup-arrow></div>
+          </div>
+          <div id="threshold-popup" class="popup-style">
+            <b>Threshold: </b>How many adjacent infected neighborhoods are required to infect a neighborhood? Enter a number from 1 to 8.
+            <div id=popup-arrow></div>
+          </div>
+          <div id="numDays-popup" class="popup-style">
+            <b>No. of Days: </b>Enter the number of days the disease will last.
+            <div id=popup-arrow></div>
           </div>
         </div>
 
-        <div id="save-btn" class="input-btn" onclick="validateFields()">
-          <i id="save-btn-icon" class="gg-import"></i>
-          <div id="save-btn-text" class="btn-text-style">Save</div>
-        </div>
-        <div id="clear-btn" class="input-btn" onclick="clearAllFields()">
-          <i id="clear-btn-icon" class="gg-erase"></i>
-          <div id="clear-btn-text" class="btn-text-style">Clear</div>
+        <div id="create-disease-btns">
+          <div id="save-btn" class="input-btn" onclick="validateFields()">
+            <i id="save-btn-icon" class="gg-import"></i>
+            <div id="save-btn-text" class="btn-text-style">Save</div>
+          </div>
+          <div id="clear-btn" class="input-btn" onclick="clearAllFields()">
+            <i id="clear-btn-icon" class="gg-erase"></i>
+            <div id="clear-btn-text" class="btn-text-style">Clear</div>
+          </div>
         </div>
       </div>
 
