Added page titles

--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Simulator</title>
+    <title>Project Outbreak | Simulator</title>
 
     <!-- Inherits some styles from the homepage -->
     <link href="../css/homepageStyle.css" rel="stylesheet">
