--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Project Outbreak | Home</title>
+        
         <!-- adding jquery, and open-source css styels for animation and more functionality-->
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
             crossorigin="anonymous"></script>
@@ -9,7 +11,6 @@
         <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
         <meta name="viewport" contents="width=device-width">
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap" rel="stylesheet" />
-        
     </head>
     <body> 
 
