--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project Outbreak | Home</title>
-        
         <!-- adding jquery, and open-source css styels for animation and more functionality-->
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
             crossorigin="anonymous"></script>
@@ -11,6 +9,7 @@
         <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
         <meta name="viewport" contents="width=device-width">
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap" rel="stylesheet" />
+        
     </head>
     <body> 
 
@@ -68,20 +67,20 @@
                     from COVID-19 illness. Some symptoms of Orthocoronavirinae are fever or chills, cough, shortness of breath, fatigue, muscle or body aches, 
                     new loss of taste or smell, nausea or vomiting, and diarrhea.</p>
                 </div>
-                <div class = "disease-text">
+            <div class = "disease-text">
                 <embed> <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="100%"
                     height="600px"></iframe></embed>
                 <iframe src="https://public.domo.com/cards/azrGr" width="100%" height="600" marginheight="0" marginwidth="0"
                     frameborder="0"></iframe>
                 <iframe src="https://public.domo.com/cards/aAR5B" width="100%" height="600" marginheight="0" marginwidth="0"
                     frameborder="0"></iframe>
-                <a class="read-more special-link-format" href="https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/cases-in-us.html"
-                    target="_blank">Read more...</a>
-                </div>
-            <div class ="bubonic-plague fade-in">
-                <h3>Bubonic Plague <em><span>&#40;Black Plague<span>&#41;</span></em></h3>
+                    <a class="read-more special-link-format" href="https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/cases-in-us.html"
+                        target="_blank">Read more on COVID-19</a>
             </div>
-            <img class="wide-image fade-in" src="../images/blackPlague.jpg" width="100%" height="400" alt="micro scale picture of black plague">
+            <div class ="bubonic-plague fade-in">
+                <h3>Bubonic Plague <em><span>&#40;Black Plague&#41;</span></em></h3>
+            </div>
+            <img class="wide-image fade-in" src="../images/blackPlague.jpg" width="100%" height="500" alt="micro scale picture of black plague">
             
             <div class="disease-text">
                 <p>The <a href="https://www.history.com/topics/middle-ages/black-death#:~:text=The%20Black%20Death%20was%20a,the%20Sicilian%20port%20of%20Messina." target="_blank">
@@ -100,7 +99,24 @@
                 the bilbo or popping it can still kill the victim from toxic shock, and the spray from the bubo is profoundly infectious
                 to those who come into contact with it.</p>
                 <a class="read-more special-link-format" href="https://www.historytoday.com/archive/black-death-greatest-catastrophe-ever"
-                    target="_blank">Read more...</a>
+                    target="_blank">Read more on Black Plague</a>
+            </div>
+
+            <div class ="bubonic-plague fade-in"> 
+                <h3>Zaire ebolavirus <em><span>&#40;Ebola Virus<span>&#41;</span></em></h3>
+            </div>
+                <img class="wide-image fade-in" src ="../images/ebola-virus.jpg" width="100%" height="500" alt ="micro sacle picture of ebola virus">
+            <div class="disease-text fade-in">
+                <p> Ebola virus was first discovered in 1976 near the Ebola River in what is now the Democratic Republic of Congo. Since
+                then, the virus has been infecting people from time to time, leading to outbreaks in several African countries.
+                Scientists do not know where Ebola virus comes from. However, based on the nature of similar viruses, they believe the
+                virus is animal-borne, with bats or nonhuman primates with bats or nonhuman primates (chimpanzees, apes, monkeys, etc.)
+                being the most likely source. Infected animals carrying the virus can transmit it to other animals, like apes, monkeys,
+                duikers and humans.
+                
+                The virus spreads to people initially through direct contact with the blood, body fluids and tissues of animals. Ebola
+                virus then spreads to other people through direct contact with body fluids of a person who is sick with or has died from
+                EVD.</p>
             </div>
 
         <!--picture of simluation with link to simulation page-->
