Added pause simulation function

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Project Outbreak | Home</title>
+
         <!-- adding jquery, and open-source css styels for animation and more functionality-->
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
             crossorigin="anonymous"></script>
@@ -9,8 +11,8 @@
         <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
         <meta name="viewport" contents="width=device-width">
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap" rel="stylesheet" />
-        
     </head>
+
     <body> 
 
         <header>
@@ -49,75 +51,75 @@
         </div>
 
             <!--Describing the diseases that will be simulated-->
-           <div class="covid">
-               <h3>Orthocoronavirinae <em><span>&#40;</span>COVID-19 or Coronavirus<span>&#41;</span></em></h3>
-               </div>
-                <img class="wide-image" src="../images/coronavirus.jpg" width="100%" height="400" alt="micro scale picture of corona virus">
-               <div class="disease-text fade-in">
-                
-                   <p>A 55-year-old individual from Hubei province in China may have been the first person to have contracted COVID-19, the
-                        disease caused by the new coronavirus spreading across the globe. That case dates back to Nov. 17, 2019, according to
-                        the South China Morning Post.</p>
-                    <p>On February 11, 2020 the <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank">World Health Organiation[1]</a> announced
-                    an official name for the disease that is causing the 2019
-                    novel coronavirus outbreak, first identified in Wuhan China. The new name of this disease is coronavirus disease 2019,
-                    abbreviated as COVID-19. In COVID-19, ‘CO’ stands for ‘corona,’ ‘VI’ for ‘virus,’ and ‘D’ for disease. Formerly, this
-                    disease was referred to as “2019 novel coronavirus” or “2019-nCoV” COVID-19 is caused by a coronavirus called SARS-CoV-2. Older adults and people who have severe 
-                    underlying medical conditions like heart or lung disease or diabetes seem to be at higher risk for developing more serious complications
-                    from COVID-19 illness. Some symptoms of Orthocoronavirinae are fever or chills, cough, shortness of breath, fatigue, muscle or body aches, 
-                    new loss of taste or smell, nausea or vomiting, and diarrhea.</p>
-                </div>
-            <div class = "disease-text">
-                <embed> <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="100%"
-                    height="600px"></iframe></embed>
-                <iframe src="https://public.domo.com/cards/azrGr" width="100%" height="600" marginheight="0" marginwidth="0"
-                    frameborder="0"></iframe>
-                <iframe src="https://public.domo.com/cards/aAR5B" width="100%" height="600" marginheight="0" marginwidth="0"
-                    frameborder="0"></iframe>
-                    <a class="read-more special-link-format" href="https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/cases-in-us.html"
-                        target="_blank">Read more on COVID-19</a>
-            </div>
-            <div class ="bubonic-plague fade-in">
-                <h3>Bubonic Plague <em><span>&#40;Black Plague&#41;</span></em></h3>
-            </div>
-            <img class="wide-image fade-in" src="../images/blackPlague.jpg" width="100%" height="500" alt="micro scale picture of black plague">
-            
-            <div class="disease-text">
-                <p>The <a href="https://www.history.com/topics/middle-ages/black-death#:~:text=The%20Black%20Death%20was%20a,the%20Sicilian%20port%20of%20Messina." target="_blank">
-                    Black Plague[2]</a> was a devastating global epidemic of bubonic plague that struck Europe and Asia in the mid-1300s. The
-                plague arrived in Europe in October 1347, when 12 ships from the Black Sea docked at the Sicilian port of Messina.
-                People gathered on the docks were met with a horrifying surprise: Most sailors aboard the ships were dead, and those
-                still alive were gravely ill and covered in black boils that oozed blood and pus.</p>
-                <p>Today, it's best known as the Black Death or the bubonic plague. Medieval people called it "the blue sickness," La pest
-                ("the Pestilence"), and "the Great Mortality." The name bubonic comes from the medieval Latin word bubo via Italian
-                bilbo--meaning a pustule, growth, or swelling. Some symptoms of the disease were fever, trembling, weakness, and profuse sweating are initial symptoms of 
-                the bubonic version. In the pneumatic version, coughing and parched throats are additional symptoms. In advanced cases, the most distinctive sign is the agonizing rise
-                of dark "buboes": sensitive black-blue swellings under the armpit and near the groin--spots where dead blood and pus
-                builds up in the lymph nodes. If the buboes are not lanced, the buildup of infected blood will cause the buboes in the
-                armpit and groin area to expand in size (typically the swelling is about golf-ball sized, but sometimes as large as
-                softballs). Untreated, the patient will die from the buildup of dead blood in these buboes. On the other hand, lancing
-                the bilbo or popping it can still kill the victim from toxic shock, and the spray from the bubo is profoundly infectious
-                to those who come into contact with it.</p>
-                <a class="read-more special-link-format" href="https://www.historytoday.com/archive/black-death-greatest-catastrophe-ever"
-                    target="_blank">Read more on Black Plague</a>
-            </div>
+        <div class="covid">
+            <h3>Orthocoronavirinae <em><span>&#40;</span>COVID-19 or Coronavirus<span>&#41;</span></em></h3>
+        </div>
+        <img class="wide-image" src="../images/coronavirus.jpg" width="100%" height="400" alt="micro scale picture of corona virus">
+        <div class="disease-text fade-in">
+        
+            <p>A 55-year-old individual from Hubei province in China may have been the first person to have contracted COVID-19, the
+                disease caused by the new coronavirus spreading across the globe. That case dates back to Nov. 17, 2019, according to
+                the South China Morning Post.</p>
+            <p>On February 11, 2020 the <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank">World Health Organiation[1]</a> announced
+            an official name for the disease that is causing the 2019
+            novel coronavirus outbreak, first identified in Wuhan China. The new name of this disease is coronavirus disease 2019,
+            abbreviated as COVID-19. In COVID-19, ‘CO’ stands for ‘corona,’ ‘VI’ for ‘virus,’ and ‘D’ for disease. Formerly, this
+            disease was referred to as “2019 novel coronavirus” or “2019-nCoV” COVID-19 is caused by a coronavirus called SARS-CoV-2. Older adults and people who have severe 
+            underlying medical conditions like heart or lung disease or diabetes seem to be at higher risk for developing more serious complications
+            from COVID-19 illness. Some symptoms of Orthocoronavirinae are fever or chills, cough, shortness of breath, fatigue, muscle or body aches, 
+            new loss of taste or smell, nausea or vomiting, and diarrhea.</p>
+        </div>
+        <div class = "disease-text">
+            <embed> <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="100%"
+                height="600px"></iframe></embed>
+            <iframe src="https://public.domo.com/cards/azrGr" width="100%" height="600" marginheight="0" marginwidth="0"
+                frameborder="0"></iframe>
+            <iframe src="https://public.domo.com/cards/aAR5B" width="100%" height="600" marginheight="0" marginwidth="0"
+                frameborder="0"></iframe>
+                <a class="read-more special-link-format" href="https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/cases-in-us.html"
+                    target="_blank">Read more on COVID-19</a>
+        </div>
+        <div class ="bubonic-plague fade-in">
+            <h3>Bubonic Plague <em><span>&#40;Black Plague&#41;</span></em></h3>
+        </div>
+        <img class="wide-image fade-in" src="../images/blackPlague.jpg" width="100%" height="500" alt="micro scale picture of black plague">
+        
+        <div class="disease-text">
+            <p>The <a href="https://www.history.com/topics/middle-ages/black-death#:~:text=The%20Black%20Death%20was%20a,the%20Sicilian%20port%20of%20Messina." target="_blank">
+                Black Plague[2]</a> was a devastating global epidemic of bubonic plague that struck Europe and Asia in the mid-1300s. The
+            plague arrived in Europe in October 1347, when 12 ships from the Black Sea docked at the Sicilian port of Messina.
+            People gathered on the docks were met with a horrifying surprise: Most sailors aboard the ships were dead, and those
+            still alive were gravely ill and covered in black boils that oozed blood and pus.</p>
+            <p>Today, it's best known as the Black Death or the bubonic plague. Medieval people called it "the blue sickness," La pest
+            ("the Pestilence"), and "the Great Mortality." The name bubonic comes from the medieval Latin word bubo via Italian
+            bilbo--meaning a pustule, growth, or swelling. Some symptoms of the disease were fever, trembling, weakness, and profuse sweating are initial symptoms of 
+            the bubonic version. In the pneumatic version, coughing and parched throats are additional symptoms. In advanced cases, the most distinctive sign is the agonizing rise
+            of dark "buboes": sensitive black-blue swellings under the armpit and near the groin--spots where dead blood and pus
+            builds up in the lymph nodes. If the buboes are not lanced, the buildup of infected blood will cause the buboes in the
+            armpit and groin area to expand in size (typically the swelling is about golf-ball sized, but sometimes as large as
+            softballs). Untreated, the patient will die from the buildup of dead blood in these buboes. On the other hand, lancing
+            the bilbo or popping it can still kill the victim from toxic shock, and the spray from the bubo is profoundly infectious
+            to those who come into contact with it.</p>
+            <a class="read-more special-link-format" href="https://www.historytoday.com/archive/black-death-greatest-catastrophe-ever"
+                target="_blank">Read more on Black Plague</a>
+        </div>
 
-            <div class ="bubonic-plague fade-in"> 
-                <h3>Zaire ebolavirus <em><span>&#40;Ebola Virus<span>&#41;</span></em></h3>
-            </div>
-                <img class="wide-image fade-in" src ="../images/ebola-virus.jpg" width="100%" height="500" alt ="micro sacle picture of ebola virus">
-            <div class="disease-text fade-in">
-                <p> Ebola virus was first discovered in 1976 near the Ebola River in what is now the Democratic Republic of Congo. Since
-                then, the virus has been infecting people from time to time, leading to outbreaks in several African countries.
-                Scientists do not know where Ebola virus comes from. However, based on the nature of similar viruses, they believe the
-                virus is animal-borne, with bats or nonhuman primates with bats or nonhuman primates (chimpanzees, apes, monkeys, etc.)
-                being the most likely source. Infected animals carrying the virus can transmit it to other animals, like apes, monkeys,
-                duikers and humans.
-                
-                The virus spreads to people initially through direct contact with the blood, body fluids and tissues of animals. Ebola
-                virus then spreads to other people through direct contact with body fluids of a person who is sick with or has died from
-                EVD.</p>
-            </div>
+        <div class ="bubonic-plague fade-in"> 
+            <h3>Zaire ebolavirus <em><span>&#40;Ebola Virus<span>&#41;</span></em></h3>
+        </div>
+            <img class="wide-image fade-in" src ="../images/ebola-virus.jpg" width="100%" height="500" alt ="micro sacle picture of ebola virus">
+        <div class="disease-text fade-in">
+            <p> Ebola virus was first discovered in 1976 near the Ebola River in what is now the Democratic Republic of Congo. Since
+            then, the virus has been infecting people from time to time, leading to outbreaks in several African countries.
+            Scientists do not know where Ebola virus comes from. However, based on the nature of similar viruses, they believe the
+            virus is animal-borne, with bats or nonhuman primates with bats or nonhuman primates (chimpanzees, apes, monkeys, etc.)
+            being the most likely source. Infected animals carrying the virus can transmit it to other animals, like apes, monkeys,
+            duikers and humans.
+            
+            The virus spreads to people initially through direct contact with the blood, body fluids and tissues of animals. Ebola
+            virus then spreads to other people through direct contact with body fluids of a person who is sick with or has died from
+            EVD.</p>
+        </div>
 
         <!--picture of simluation with link to simulation page-->
         <img id="screenshot" src="../images/place-holder.jpg" alt ="Screenshot of simulator">
@@ -133,11 +135,15 @@
         <!--sources and cited work that we used for the information on diseases-->
         <footer id="footer-banner">
             <div id="sources">
-                <cite>Sources: [1] https://www.who.int/emergencies/diseases/novel-coronavirus-2019 [2] https://www.history.com/ [3] https://ourworldindata.org/ <br> [4] https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6</cite>
+                <cite>Sources: [1] https://www.who.int/emergencies/diseases/novel-coronavirus-2019</cite>
+                <cite>[2] https://www.history.com/</cite>
+                <cite>[3] https://ourworldindata.org/</cite>
+                <br>
+                <cite>[4] https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6</cite>
             </div>
         </footer>
-        <!--javascript file for fading scroll effect-->
-    <script src="../scripts/scrollEffect.js"></script>
 
+        <!--javascript file for fading scroll effect-->
+        <script src="../scripts/scrollEffect.js"></script>
     </body>
 </html>
